nav bar, navy update, about update

--- a/about.html
+++ b/about.html
@@ -30,6 +30,11 @@
 
 <section>
   <h2>about me</h2>
+    <p>
+        hi, i’m tanish 👋 i’m a machine learning researcher and software engineer with a passion for
+        understanding how we see the world. my work blends deep learning, cognitive science, and
+        data engineering to build models that mimic human perception.
+    </p>
 
   <p>
     born and raised in california, i’m double‑majoring in statistics & data science and
