updated about me and research pages

--- a/about.html
+++ b/about.html
@@ -30,34 +30,25 @@
 
 <section>
   <h2>about me</h2>
-    <p>
-        hi, i’m tanish 👋 i’m a machine learning researcher and software engineer with a passion for
-        understanding how we see the world. my work blends deep learning, cognitive science, and
-        data engineering to build models that mimic human perception.
-    </p>
-
+    
   <p>
-    born and raised in california, i’m double‑majoring in statistics & data science and
-    psychological & brain sciences at the university of california, santa barbara, where i maintain a
-    3.92 gpa and pursue an honors thesis on how convolutional neural networks learn to ignore
-    background distractors. <!-- :contentReference[oaicite:16]{index=16} -->
-  </p>
-
-  <p>
-    outside the lab you’ll find me co‑founding gaucho sports analytics, teaching workshops that
-    blend sabermetrics with pytorch, and raising money for charity through ucsb dhadkan’s
-    bollywood‑fusion dance competition—over $30 k so far. <!-- :contentReference[oaicite:17]{index=17} -->
+    hi, i'm tanish! i'm a <b>neuroscience and machine learning researcher</b> with a passion for
+    understanding <b>how humans see and understand the world</b>, as well as how we can improve 
+    artificial systems to perform tasks at the same level as humans. 
+    my interests lie in blending <b>deep learning, cognitive science, and data engineering</b> to 
+    <b>build models</b> that mimic human perception.
   </p>
 
   <h3>quick facts</h3>
   <ul>
-    <li class="card">awards: urca grant ’24, duval scholarship ’25, dean’s list honours<!-- :contentReference[oaicite:18]{index=18} --></li>
-    <li class="card">teaching: lead a weekly python series for ~60 research assistants</li>
-    <li class="card">technical toolkit: python, pytorch, tensorflow, airflow, dbt, react, r <!-- :contentReference[oaicite:19]{index=19} --></li>
+    <li class="card">majors: <b>b.s. statistics and data science</b> and <b>b.s. psychological and brain sciences</b> <!-- :contentReference[oaicite:18]{index=18} --></li>
+    <li class="card">gpa: <b>3.92</b> </li>
+    <li class="card">technical toolkit: python (including all data libraries), pytorch, tensorflow, web-dev (html, css, javascript, react) airflow, dbt, r<!-- :contentReference[oaicite:19]{index=19} --></li>
+    <li class="card">current addictions: coffee (and working at cafes), making fried rice, pokemon cards  </li>
   </ul>
 </section>
 
-<footer>© 2025 tanish mendki</footer>
+<footer>© 2025 tanish mendki</footer>
 
 </body>
 </html>
