bug fix with images

--- a/experience.html
+++ b/experience.html
@@ -132,7 +132,7 @@
       <img src="images/gsa-1.jpeg" alt="gaucho sports analytics - event 1" />
       <img src="images/gsa-2.png" alt="gaucho sports analytics - logo" />
       <img src="images/gsa-3.jpeg" alt="gaucho sports analytics - event 3" />
-      <img src="images/gsa-4.jpg" alt="gaucho sports analytics - event 4" />
+      <img src="images/gsa-4.JPG" alt="gaucho sports analytics - event 4" />
     </div>
 
     <h3>quick facts</h3>
@@ -163,8 +163,8 @@
     <div class="gallery">
       <img src="images/dhadkan-1.jpeg" alt="ucsb dhadkan - pre-show taco bell" />
       <img src="images/dhadkan-2.jpg" alt="ucsb dhadkan - logo" />
-      <img src="images/dhadkan-3.jpeg" alt="ucsb dhadkan - stage and tech" />
-      <img src="images/dhadkan-4.jpg" alt="ucsb dhadkan - executive board" />
+      <img src="images/dhadkan-3.JPEG" alt="ucsb dhadkan - stage and tech" />
+      <img src="images/dhadkan-4.JPG" alt="ucsb dhadkan - executive board" />
     </div>
 
     <h3>quick facts</h3>
