--- a/index.html
+++ b/index.html
@@ -4,48 +4,422 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tanish mendki</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Index-specific styles */
+    body {
+      overflow-x: hidden;
+    }
+
+    /* Loading screen */
+    .loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: var(--bg);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      transition: opacity 0.5s ease;
+    }
+
+    .loading-screen.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .loader {
+      width: 50px;
+      height: 50px;
+      border: 3px solid var(--bg-secondary);
+      border-top: 3px solid var(--accent);
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    /* Neural network background */
+    .neural-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      opacity: 0.4;
+    }
+
+    /* Hero section */
+    .hero {
+      padding: 4rem 1.5rem 2rem;
+      text-align: center;
+      animation: fadeInUp 1s ease 0.5s both;
+    }
+
+    .hero-content {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      color: var(--fg);
+    }
+
+    .hero .tagline {
+      font-size: 1.3rem;
+      color: var(--accent);
+      margin-bottom: 1.5rem;
+      font-weight: 500;
+    }
+
+    .hero .description {
+      font-size: 1.1rem;
+      color: #666;
+      line-height: 1.8;
+      margin-bottom: 2rem;
+    }
+
+    /* About section */
+    .about {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 3rem 1.5rem;
+      animation: fadeInUp 1s ease 0.7s both;
+    }
+
+    .about-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 4rem;
+      margin-top: 2rem;
+    }
+
+    .about-text {
+      font-size: 1.1rem;
+      line-height: 1.8;
+    }
+
+    .about-text strong {
+      color: var(--accent);
+      font-weight: 600;
+    }
+
+    .quick-facts h3 {
+      font-size: 1.4rem;
+      color: var(--accent);
+      margin-bottom: 1.5rem;
+    }
+
+    .quick-facts ul {
+      list-style: none;
+    }
+
+    .quick-facts li {
+      background: white;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+      border-left: 4px solid var(--accent);
+      box-shadow: 0 2px 10px var(--shadow);
+      transition: all 0.3s ease;
+    }
+
+    .quick-facts li:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 20px var(--shadow);
+    }
+
+    .quick-facts strong {
+      color: var(--accent);
+    }
+
+    /* Contact section */
+    .contact {
+      background: var(--bg-secondary);
+      padding: 4rem 1.5rem;
+      text-align: center;
+      animation: fadeInUp 1s ease 0.9s both;
+    }
+
+    .contact h2 {
+      font-size: 2rem;
+      color: var(--accent);
+      margin-bottom: 2rem;
+    }
+
+    .contact-links {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .contact-links a {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 1rem 1.5rem;
+      background: white;
+      border-radius: 50px;
+      text-decoration: none;
+      color: var(--fg);
+      box-shadow: 0 4px 15px var(--shadow);
+      transition: all 0.3s ease;
+      font-weight: 500;
+    }
+
+    .contact-links a:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 25px rgba(65, 51, 214, 0.2);
+      background: var(--accent);
+      color: white;
+    }
+
+    .contact-links svg {
+      width: 20px;
+      height: 20px;
+      fill: currentColor;
+    }
+
+    /* Index-specific responsive styles */
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2rem;
+      }
+
+      .hero .tagline {
+        font-size: 1.1rem;
+      }
+
+      .about-grid {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+      }
+
+      .contact-links {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+  </style>
 </head>
+
 <body>
-
-<header>
-  <div class="brand">tanish mendki</div>
-
-  <nav>
-    <a href="about.html">about</a>
-    <a href="research.html">research</a>
-    <a href="projects.html">projects</a>
-    <a href="experience.html">experience</a>
-    <a href="contact.html">contact</a>
-  </nav>
-
-  <div class="social">
-    <!-- spotify -->
-    <a href="https://open.spotify.com/user/your‑spotify‑id" target="_blank" aria-label="spotify">
-      <svg viewBox="0 0 168 168" role="img">
-        <path d="M84 0a84 84 0 100 168 84 84 0 000-168zm38.3 120.4c-1.4 2.4-4.4 3.1-6.8 1.7-18.7-11.5-42.2-14.1-70-7.6-2.7.6-5.4-1-6.1-3.7-.7-2.7 1-5.4 3.7-6.1 30.8-7 56.6-4.1 77.2 8.6 2.3 1.4 3 4.4 1.7 6.9zm9.7-20.4c-1.8 2.9-5.6 3.9-8.5 2.1-21.5-13.2-54.2-17-79.6-9.2-3.3 1-6.8-.9-7.8-4.2-1-3.3.9-6.8 4.2-7.8 30.3-9.2 66.7-5 91.5 10.4 2.9 1.8 3.9 5.6 2.1 8.7zm.8-22.4C107.9 64 67.4 62.7 41 70c-3.9 1.1-7.9-1.2-9-5.1-1.1-3.9 1.2-7.9 5.1-9C68.4 47 114.2 48.4 140.2 65.3c3.3 2.1 4.3 6.5 2.1 9.8z"/>
-      </svg>
-    </a>
-    <!-- linkedin -->
-    <a href="https://www.linkedin.com/in/tanishmendki" target="_blank" aria-label="linkedin">
-      <svg viewBox="0 0 448 512" role="img">
-        <path d="M100.3 448H7V148.9h93.3V448zM53.7 108.1C24.1 108.1 0 83.5 0 53.9 0 24.3 24.6 0 54.4 0s54.4 24.3 54.4 53.9c-.1 29.6-24.5 54.2-55.1 54.2zM447.9 448h-93V302.4c0-34.7-.7-79.2-48.1-79.2-48.2 0-55.6 37.7-55.6 76.6V448h-93.1V148.9h89.5v40.8h1.3c12.5-23.7 43-48.7 88.5-48.7 94.7 0 112.1 62.4 112.1 143.3V448z"/>
-      </svg>
-    </a>
+  <!-- Loading Screen -->
+  <div class="loading-screen" id="loadingScreen">
+    <div class="loader"></div>
   </div>
-</header>
 
-<section>
-  <h2>hi, i’m tanish 👋</h2>
+  <!-- Neural Network Background -->
+  <canvas class="neural-bg" id="neuralCanvas"></canvas>
 
-  <p>
-    explore the links above to dive into my work, or catch my latest playlists & papers via
-    the icons in the corner.
-  </p>
-</section>
+  <!-- Header -->
+  <header>
+    <div class="brand">tanish mendki</div>
+    <nav>
+      <a href="index.html">home</a>
+      <a href="work.html">my work</a>
+      <a href="experience.html">experience</a>
+    </nav>
+    <div class="social">
+      <a href="https://open.spotify.com/user/tanish" target="_blank" aria-label="spotify">
+        <svg viewBox="0 0 168 168" role="img">
+          <path d="M84 0a84 84 0 100 168 84 84 0 000-168zm38.3 120.4c-1.4 2.4-4.4 3.1-6.8 1.7-18.7-11.5-42.2-14.1-70-7.6-2.7.6-5.4-1-6.1-3.7-.7-2.7 1-5.4 3.7-6.1 30.8-7 56.6-4.1 77.2 8.6 2.3 1.4 3 4.4 1.7 6.9zm9.7-20.4c-1.8 2.9-5.6 3.9-8.5 2.1-21.5-13.2-54.2-17-79.6-9.2-3.3 1-6.8-.9-7.8-4.2-1-3.3.9-6.8 4.2-7.8 30.3-9.2 66.7-5 91.5 10.4 2.9 1.8 3.9 5.6 2.1 8.7zm.8-22.4C107.9 64 67.4 62.7 41 70c-3.9 1.1-7.9-1.2-9-5.1-1.1-3.9 1.2-7.9 5.1-9C68.4 47 114.2 48.4 140.2 65.3c3.3 2.1 4.3 6.5 2.1 9.8z"/>
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com/in/tanishmendki" target="_blank" aria-label="linkedin">
+        <svg viewBox="0 0 448 512" role="img">
+          <path d="M100.3 448H7V148.9h93.3V448zM53.7 108.1C24.1 108.1 0 83.5 0 53.9 0 24.3 24.6 0 54.4 0s54.4 24.3 54.4 53.9c-.1 29.6-24.5 54.2-55.1 54.2zM447.9 448h-93V302.4c0-34.7-.7-79.2-48.1-79.2-48.2 0-55.6 37.7-55.6 76.6V448h-93.1V148.9h89.5v40.8h1.3c12.5-23.7 43-48.7 88.5-48.7 94.7 0 112.1 62.4 112.1 143.3V448z"/>
+        </svg>
+      </a>
+      <a href="https://github.com/yourname" target="_blank" aria-label="github">
+        <svg viewBox="0 0 24 24">
+          <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+        </svg>
+      </a>
+    </div>
+  </header>
 
+  <!-- Hero Section -->
+  <div class="hero">
+    <div class="hero-content">
+      <h1>hi, i'm tanish!</h1>
+      <p class="tagline">neuroscience meets machine learning</p>
+      <p class="description">
+        understanding how humans see and learn, building AI systems that think like us
+      </p>
+    </div>
+  </div>
 
-<footer>© 2025 tanish mendki</footer>
+  <!-- About Section -->
+  <section class="about">
+    <div class="about-grid">
+      <div class="about-text">
+        <p>
+          i'm a <strong>neuroscience and machine learning researcher</strong> with a passion for
+          understanding <strong>how humans see and understand the world</strong>, as well as how we can improve 
+          artificial systems to perform tasks at the same level as humans. 
+          my interests lie in blending <strong>deep learning, cognitive science, and data engineering</strong> to 
+          <strong>build models</strong> that mimic human perception.
+        </p>
+      </div>
+      <div class="quick-facts">
+        <h3>quick facts</h3>
+        <ul>
+          <li>majors: <strong>b.s. statistics and data science</strong> and <strong>b.s. psychological and brain sciences</strong></li>
+          <li>gpa: <strong>3.92</strong></li>
+          <li>technical toolkit: python (including all data libraries), pytorch, tensorflow, web-dev (html, css, javascript, react) airflow, dbt, r</li>
+          <li>current addictions: coffee (and working at cafés), making fried rice, pokemon cards</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
+  <!-- Contact Section -->
+  <section class="contact">
+    <h2>let's connect</h2>
+    <div class="contact-links">
+      <a href="mailto:tanish@example.com">
+        <svg viewBox="0 0 24 24">
+          <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+        </svg>
+        email me
+      </a>
+      <a href="https://github.com/yourname" target="_blank">
+        <svg viewBox="0 0 24 24">
+          <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+        </svg>
+        github
+      </a>
+      <a href="https://www.linkedin.com/in/tanishmendki" target="_blank">
+        <svg viewBox="0 0 24 24">
+          <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 01-2.063-2.065 2.064 2.064 0 112.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+        </svg>
+        linkedin
+      </a>
+    </div>
+  </section>
+
+  <footer>© 2025 tanish mendki</footer>
+
+  <script>
+    // Loading screen
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        document.getElementById('loadingScreen').classList.add('fade-out');
+      }, 800);
+    });
+
+    // Neural network background
+    const canvas = document.getElementById('neuralCanvas');
+    const ctx = canvas.getContext('2d');
+    let animationId;
+
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+
+    resizeCanvas();
+    window.addEventListener('resize', resizeCanvas);
+
+    // Neural network nodes
+    const nodes = [];
+    const nodeCount = 40;
+
+    // Initialize nodes
+    for (let i = 0; i < nodeCount; i++) {
+      nodes.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        vx: (Math.random() - 0.5) * 0.3,
+        vy: (Math.random() - 0.5) * 0.3,
+        radius: Math.random() * 2 + 1,
+        opacity: Math.random() * 0.4 + 0.2
+      });
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      
+      // Update and draw nodes
+      nodes.forEach(node => {
+        node.x += node.vx;
+        node.y += node.vy;
+
+        // Bounce off edges
+        if (node.x < 0 || node.x > canvas.width) node.vx *= -1;
+        if (node.y < 0 || node.y > canvas.height) node.vy *= -1;
+
+        // Draw node
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, node.radius, 0, Math.PI * 2);
+        ctx.fillStyle = `rgba(65, 51, 214, ${node.opacity})`;
+        ctx.fill();
+      });
+
+      // Draw connections
+      for (let i = 0; i < nodes.length; i++) {
+        for (let j = i + 1; j < nodes.length; j++) {
+          const dx = nodes[i].x - nodes[j].x;
+          const dy = nodes[i].y - nodes[j].y;
+          const distance = Math.sqrt(dx * dx + dy * dy);
+
+          if (distance < 120) {
+            const opacity = (120 - distance) / 120 * 0.15;
+            ctx.beginPath();
+            ctx.moveTo(nodes[i].x, nodes[i].y);
+            ctx.lineTo(nodes[j].x, nodes[j].y);
+            ctx.strokeStyle = `rgba(65, 51, 214, ${opacity})`;
+            ctx.lineWidth = 1;
+            ctx.stroke();
+          }
+        }
+      }
+
+      animationId = requestAnimationFrame(animate);
+    }
+
+    animate();
+
+    // Mouse interaction with neural network
+    canvas.addEventListener('mousemove', (e) => {
+      const rect = canvas.getBoundingClientRect();
+      const mouseX = e.clientX - rect.left;
+      const mouseY = e.clientY - rect.top;
+
+      nodes.forEach(node => {
+        const dx = mouseX - node.x;
+        const dy = mouseY - node.y;
+        const distance = Math.sqrt(dx * dx + dy * dy);
+
+        if (distance < 80) {
+          const force = (80 - distance) / 80 * 0.008;
+          node.vx += dx * force;
+          node.vy += dy * force;
+        }
+      });
+    });
+
+    // Pause animation when page is not visible
+    document.addEventListener('visibilitychange', () => {
+      if (document.hidden) {
+        cancelAnimationFrame(animationId);
+      } else {
+        animate();
+      }
+    });
+  </script>
 </body>
 </html>
