dhadkan not dhadak

--- a/experience.html
+++ b/experience.html
@@ -259,7 +259,7 @@
 
     <!-- UCSB Dhadak -->
     <article class="leadership-card">
-      <h3>ucsb dhadak</h3>
+      <h3>ucsb dhadkan</h3>
       
       <div class="gallery">
         <img src="images/dhadkan-1.jpeg" alt="ucsb dhadkan - pre-show taco bell" />
