general updates, added project links

--- a/experience.html
+++ b/experience.html
@@ -231,7 +231,7 @@
 
     <!-- Gaucho Sports Analytics -->
     <article class="leadership-card">
-      <h3>gaucho sports analytics</h3>
+      <h3 href="https://gauchosportsanalytics.com/">gaucho sports analytics</h3>
       
       <div class="gallery">
         <img src="images/gsa-1.jpeg" alt="gaucho sports analytics - event 1" />
