--- a/work.html
+++ b/work.html
@@ -136,15 +136,15 @@
           </svg>
           <div>
             <div class="card-title">are old vision models useless?</div>
-            <div class="card-meta">independent research · 2024</div>
+            <div class="card-meta">independent research · 2025-present</div>
           </div>
         </div>
         <ul class="research-bullets">
-          <li>re‑implemented <strong>classical vision models</strong> (e.g., gabor pyramids, gist, hmax) from scratch</li>
+          <li>re-implemented <strong>classical vision models</strong> (e.g., gabor pyramids, gist, hmax) from scratch</li>
           <li>ran a curated benchmark of natural & synthetic stimuli through each architecture</li>
-          <li>extracted layer‑wise activations and compared them to primate neural data</li>
-          <li><strong>surprise finding:</strong> certain hand‑crafted features remain highly brain‑aligned</li>
-          <li>paper draft in prep; tool released under mit license for community replication</li>
+          <li>extracted layer-wise activations and compared them to primate neural data</li>
+          <li><strong>surprise finding:</strong> certain hand-crafted features remain highly brain-aligned</li>
+          <li>paper draft in prep; planned submission to neureps</li>
         </ul>
       </article>
 
@@ -155,14 +155,14 @@
           </svg>
           <div>
             <div class="card-title">deceptive descriptions</div>
-            <div class="card-meta">collaborative research · 2024</div>
+            <div class="card-meta">vision & image understanding lab · 2024-present</div>
           </div>
         </div>
         <ul class="research-bullets">
           <li>studying how humans and llms rate <strong>"fake expertise"</strong> in everyday image captions</li>
           <li>curated 360 images with intentionally misleading descriptions across 5 domains</li>
-          <li>collected human deceptiveness ratings; compared to gpt‑4 & llama‑3 judgments</li>
-          <li>running a follow‑up to test decision‑making under deceptive information</li>
+          <li>collected human deceptiveness ratings; compared to gpt-4 & gemini-2.5 judgments</li>
+          <li>running a follow-up to test decision-making under deceptive information</li>
         </ul>
       </article>
     </div>
@@ -187,12 +187,11 @@
           </div>
         </div>
         <p class="card-description">
-          synthetic image generator + model‑introspection toolbox built with pytorch, numpy, and sklearn. 
+          synthetic image generator + model-introspection toolbox built with pytorch, numpy, and sklearn. 
           comprehensive analysis of how convolutional neural networks process visual search tasks with varying background complexity.
         </p>
         <div class="card-links">
-          <a href="#" target="_blank">view paper ↗</a>
-          <a href="#" target="_blank">code ↗</a>
+          <a href="https://drive.google.com/file/d/1DoGqMwU0nhe-BO1t6K23jjJDD2VKuyBu/view?usp=sharing" target="_blank">view poster ↗</a>
         </div>
       </article>
 
@@ -202,17 +201,16 @@
             <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/>
           </svg>
           <div>
-            <div class="card-title">dynamic gaze‑cueing models</div>
+            <div class="card-title">dynamic gaze-cueing models</div>
             <div class="card-meta">computational modeling · 2024</div>
           </div>
         </div>
         <p class="card-description">
-          bayesian ideal observer, 3d‑cnn, and drift diffusion model that replicate attentional orienting effects. 
+          bayesian ideal observer, 3d-cnn, and drift diffusion model that replicate attentional orienting effects. 
           comprehensive framework for understanding how gaze cues influence visual attention in dynamic scenes.
         </p>
         <div class="card-links">
-          <a href="#" target="_blank">demo ↗</a>
-          <a href="#" target="_blank">code ↗</a>
+          <a href="https://drive.google.com/file/d/12DgvM0ldJFHGUKlrqR-LN85lC4Nr1dlD/view?usp=sharing" target="_blank">view paper ↗</a>
         </div>
       </article>
 
@@ -231,8 +229,7 @@
           helps students make informed decisions about course selection based on aggregated professor reviews and ratings.
         </p>
         <div class="card-links">
-          <a href="#" target="_blank">app store ↗</a>
-          <a href="#" target="_blank">code ↗</a>
+          <a href="https://devpost.com/software/classify-4uia06" target="_blank">view demo ↗</a>
         </div>
       </article>
 
@@ -247,12 +244,11 @@
           </div>
         </div>
         <p class="card-description">
-          predicts run/pass/punt/kickoff using ten seasons of play‑by‑play data with a custom keras model. 
+          predicts run/pass/punt/kickoff using ten seasons of play-by-play data with a custom keras model. 
           comprehensive feature engineering and model optimization for accurate real-time play prediction.
         </p>
         <div class="card-links">
-          <a href="https://github.com/yourname/nfl-play-predictor" target="_blank">code ↗</a>
-          <a href="#" target="_blank">demo ↗</a>
+          <a href="https://colab.research.google.com/drive/19aCojwHmncGYKjaFxXJ5pAGw3Vi1BuE_?usp=sharing" target="_blank">code ↗</a>
         </div>
       </article>
     </div>
