--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-      opacity: 0.8;
+      opacity: 1.0;
     }
 
     /* Hero section */
@@ -279,8 +279,8 @@
         <ul>
           <li>majors: <strong>b.s. statistics and data science</strong> and <strong>b.s. psychological and brain sciences</strong></li>
           <li>gpa: <strong>3.92</strong></li>
-          <li>technical toolkit: python (including all data libraries), pytorch, tensorflow, web-dev (html, css, javascript, react) airflow, dbt, r</li>
-          <li>current addictions: coffee (and working at cafés), making fried rice, pokemon cards</li>
+          <li><strong>technical toolkit:</strong> python (including all data libraries), pytorch, tensorflow, web-dev (html, css, javascript, react) airflow, dbt, r</li>
+          <li><strong>current addictions:</strong> coffee (and working at cafés), making fried rice, pokemon cards</li>
         </ul>
       </div>
     </div>
